rst cache time & activity tweaks (#6506)
* fix: cacheTime to RSTs and activity tweaks

* fix: guard against very small buyins

* chore: remove unused vars

* new tx type: launch

* fix transaction icon for launch type

* addNewTransaction was missing for TL

* use getState

* useMemo

* Update src/languages/en_US.json

* chore: comment out test token info

* chore: bump sdk

* Use pending for txn status

* Add claim sheet native asset price fallback

* legacy gas support

* FastTransactionCoinRow refactor

* add name & symbol to rainbowSuperTokenStore

* Update finding the asset from changes for tokens

* Remove unused hook

---------

Co-authored-by: Bruno Barbieri <brunobar79@gmail.com>
Co-authored-by: Bruno Barbieri <1247834+brunobar79@users.noreply.github.com>
Co-authored-by: Christian Baroni <7061887+christianbaroni@users.noreply.github.com>
Co-authored-by: jinchung <jin.chung17@gmail.com>

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -2269,6 +2269,11 @@
           "confirmed": "Interacted",
           "failed": "Interaction Failed"
         },
+        "launch": {
+          "pending": "Launching",
+          "confirmed": "Launched",
+          "failed": "Launch Failed"
+        },
         "swap": {
           "pending": "Swapping",
           "confirmed": "Swapped",
@@ -3236,7 +3241,9 @@
         "too_big": "Too big.",
         "must_be_greater_than_0": "Must be greater than 0",
         "amount_is_greater_than_balance": "Amount is greater than balance",
-        "amount_is_greater_than_max_prebuy_amount": "Exceeds max pre-buy amount of %{maxPrebuyAmount} %{chainNativeAssetSymbol}"
+        "amount_is_greater_than_max_prebuy_amount": "Exceeds max pre-buy amount of %{maxPrebuyAmount} %{chainNativeAssetSymbol}",
+        "amount_is_less_than_min_prebuy_amount": "Must exceed min pre-buy amount of %{minPrebuyAmount} %{chainNativeAssetSymbol}",
+        "amount_too_small": "Amount too small! Try a little more!"
       },
       "titles": {
         "total_supply": "Total supply",
