support showing other and farcaster links in token screen

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -703,6 +703,8 @@
           "reddit": "Reddit",
           "telegram": "Telegram",
           "twitter": "Twitter",
+          "farcaster": "Farcaster",
+          "other": "Other",
           "search_on_twitter": "Search on Twitter"
         },
         "uniswap_liquidity": "Uniswap liquidity",
