change display of farcaster to warpcast, fix icon size

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -703,6 +703,7 @@
           "reddit": "Reddit",
           "telegram": "Telegram",
           "twitter": "Twitter",
+          "warpcast": "Warpcast",
           "farcaster": "Farcaster",
           "other": "Other",
           "search_on_twitter": "Search on Twitter"
