Ftl links fixes (#6511)
* support showing other and farcaster links in token screen

* show quick buy section first when asset is not owned

* add farcaster & other link types to metadata query, display properly in about section, cleanup link types

* change input validators to not allow strings starting with '@'

* change display of farcaster to warpcast, fix icon size

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -703,6 +703,9 @@
           "reddit": "Reddit",
           "telegram": "Telegram",
           "twitter": "Twitter",
+          "warpcast": "Warpcast",
+          "farcaster": "Farcaster",
+          "other": "Other",
           "search_on_twitter": "Search on Twitter"
         },
         "uniswap_liquidity": "Uniswap liquidity",
