--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -748,6 +748,17 @@
         "about": {
           "title": "About",
           "what_is": "What is %{assetName}?"
+        },
+        "history": {
+          "tabs": {
+            "all": "All",
+            "buys": "Buys",
+            "sells": "Sells"
+          },
+          "more": "More",
+          "less": "Less",
+          "bought": "Bought",
+          "sold": "Sold"
         }
       },
       "chart": {
