add received, sent, and fixed bug where it was using asset price data instead of entry price data

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -758,7 +758,10 @@
           "more": "More",
           "less": "Less",
           "bought": "Bought",
-          "sold": "Sold"
+          "sold": "Sold",
+          "received": "Received",
+          "sent": "Sent",
+          "unknown": "Unknown"
         }
       },
       "chart": {
