Add History section to expanded state (#6535)
* add history section

* i18n

* fix more button showing when it shouldn't

* try to improve transition from loader -> data

* only show tabs if needed

* only show history section if there is history

* add received, sent, and fixed bug where it was using asset price data instead of entry price data

* remove console log

* remove scrollbar from expanded asset sheet

* fix some height calculations

* use react fragment instead of <>

* cleanup tab context wrapper

* chore:code review suggestions

* fix colors

* improve expand / collapse animations

* remove shared layout stuff

* fix overflow hidden issue maybe?

* change tabs to accomodate state or shared values

* fix animation snap and list overflow issue i think

* sheet content cleanup and fix missing borderWidth on tab

* fix layouts

* fix buy section conditional

* code review changes

* properly filter buys/sells

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -748,6 +748,20 @@
         "about": {
           "title": "About",
           "what_is": "What is %{assetName}?"
+        },
+        "history": {
+          "tabs": {
+            "all": "All",
+            "buys": "Buys",
+            "sells": "Sells"
+          },
+          "more": "More",
+          "less": "Less",
+          "bought": "Bought",
+          "sold": "Sold",
+          "received": "Received",
+          "sent": "Sent",
+          "unknown": "Unknown"
         }
       },
       "chart": {
