implement proper first time send tracking and wallet interactions using addys API

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -2894,6 +2894,7 @@
         "sending_title": "Sending",
         "you_own_this_wallet": "You own this wallet",
         "first_time_send": "First time send",
+        "previous_send": "%{number} previous send",
         "previous_sends": "%{number} previous sends"
       },
       "wallet_connect": {
