multi-transaction type done just need to test

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -470,7 +470,10 @@
         "select_a_network": "Select a Network",
         "select_a_token": "Select a Token",
         "amount_to_claim_on_network": "%{amount} to claim on %{network}",
-        "claim": "Claim",
+        "claim": {
+          "single": "Claim",
+          "multiple": "Claim %{currentIndex} of %{totalActions}"
+        },
         "claiming": "Claiming",
         "claim_in_progress": "Claim in Progress...",
         "claimed": "Claimed!",
