--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -519,6 +519,7 @@
       "alert": "Alert",
       "analyze_env_variables": "Analyze ENV Variables",
       "analyze_react_query": "Analyze React Query",
+      "analyze_env_variables": "Analyze ENV Variables",
       "applied": "APPLIED",
       "backups_deleted_successfully": "Backups Deleted Successfully",
       "clear_async_storage": "Clear AsyncStorage",
