enable multi token LP claims

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -476,6 +476,9 @@
         "claimed": "Claimed!",
         "claiming_failed": "Claim Failed",
         "insufficient_funds": "Insufficient Funds",
+        "hold_to_claim": "Hold to Claim",
+        "creator_lp_fees": "Creator LP Fees",
+        "rainbow_token_launcher": "Rainbow Token Launcher",
         "claim_amount": "Claim %{amount}",
         "done": "Done",
         "try_again": "Try Again",
