--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -467,6 +467,7 @@
         "quote_error": "Quote Error",
         "no_route_found": "No Route Found",
         "fetching_quote": "Fetching Quote...",
+        "rainbow_eth_rewards": "Rainbow ETH Rewards",
         "select_a_network": "Select a Network",
         "select_a_token": "Select a Token",
         "amount_to_claim_on_network": "%{amount} to claim on %{network}",
