--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -467,6 +467,9 @@
         "quote_error": "Quote Error",
         "no_route_found": "No Route Found",
         "fetching_quote": "Fetching Quote...",
+        "rainbow_eth_rewards": "Rainbow ETH Rewards",
+        "merkl_claimable": "%{dappName} Vault",
+        "merkl_claimable_description": "%{assetSymbols} Strategy",
         "select_a_network": "Select a Network",
         "select_a_token": "Select a Token",
         "amount_to_claim_on_network": "%{amount} to claim on %{network}",
@@ -476,6 +479,9 @@
         "claimed": "Claimed!",
         "claiming_failed": "Claim Failed",
         "insufficient_funds": "Insufficient Funds",
+        "hold_to_claim": "Hold to Claim",
+        "creator_lp_fees": "Creator LP Fees",
+        "rainbow_token_launcher": "Rainbow Token Launcher",
         "claim_amount": "Claim %{amount}",
         "done": "Done",
         "try_again": "Try Again",
