Fix wallet creation, add missing loading states
This code needs proper cleanup but this fixes wallet creation (`createAccount` was missing an await), adds the missing "Creating..." loading state, and blocks multiple wallet creations from being triggered. Now consistent with creating from settings.

Also writes the new wallet to the keychain as the store is fully relied upon for account creation.

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -2648,7 +2648,7 @@
         "cloud_backup_link": "Learn more…",
         "view_secret_phrase": "View Secret Phrase",
         "view_private_key": "View Private Key",
-        "copy_wallet_address": "Copy wallet address"
+        "copy_wallet_address": "Copy Wallet Address"
       },
       "balance_title": "Balance",
       "buy": "Buy",
