fix other languages

--- a/src/languages/ar_AR.json
+++ b/src/languages/ar_AR.json
@@ -1039,7 +1039,7 @@
         "text": "Linea هي سلسلة بلوكشين من الطبقة 2 آمنة ومنخفضة التكلفة ومعادلة لإيثريوم، تم تطويرها بواسطة ConsenSys.\n\nتتيح معاملات أسرع وأرخص بدون التضحية بالأمان واللامركزية، وتهدف إلى جلب مليار مستخدم جديد إلى ويب3.",
         "title": "ما هي Linea؟"
       },
-      "optimism": {
+      "opmainnet": {
         "text": "التفاؤل هو شبكة الطبقة 2 التي تعمل فوق الإيثريوم ، مما يتيح المعاملات الأرخص والأسرع مع الاستفادة من الأمن الأساسي للإيثريوم.\n\nيجمع الكثير من المعاملات معًا في \"التجميع\" قبل إرسالها للعيش بشكل دائم على الإيثريوم.",
         "title": "ما هو التفاؤل؟"
       },
