--- a/src/languages/hi_IN.json
+++ b/src/languages/hi_IN.json
@@ -1039,7 +1039,7 @@
         "text": "लीनेया एक सुरक्षित, कम लागत वाली, इथेरियम-समकक्ष लेयर 2 ब्लॉकचेन है जिसे ConsenSys द्वारा विकसित किया गया है।\n\nयह तेज और अधिक किफायती लेनदेन को सक्षम करती है बिना सुरक्षा और विकेंद्रीकरण को प्रभावित किए, और अगले अरब उपयोगकर्ताओं को Web3 में शामिल करने का लक्ष्य रखती है।",
         "title": "लीनेया क्या है?"
       },
-      "optimism": {
+      "opmainnet": {
         "text": "आशावाद एक परत 2 नेटवर्क है जो ईथेरियम के ऊपर चलता है, यह सस्ते और तेज़ लेनदेन को सक्षम करता है जबकि अभी भी ईथेरियम की आधारभूत सुरक्षा से लाभ उठाता है।\n\nयह एक \"रोल अप\" में कई लेनदेनों को एक साथ बंधेली करता है पहले उन्हें ईथेरियम पर स्थायी रूप से रहने के लिए भेजता है।",
         "title": "आशावाद क्या है?"
       },
