--- a/src/languages/ja_JP.json
+++ b/src/languages/ja_JP.json
@@ -1039,7 +1039,7 @@
         "text": "LineaはConsenSysによって開発された安全で低コストのEthereumに相当するレイヤー2ブロックチェーンです。\n\nそれはセキュリティと分散化を犠牲にすることなく、より迅速で手頃な取引を可能にし、次の10億のWeb3ユーザーをオンボードすることを目指しています。",
         "title": "Lineaとは？"
       },
-      "optimism": {
+      "opmainnet": {
         "text": "Optimismは、Ethereumの基盤のセキュリティを利用しつつ、より安価かつ高速なトランザクションを実現するLayer 2ネットワークです。\n\nEthereum上で永久的に生き残る前に、多くのトランザクションをまとめて\"roll up\"して送信します。",
         "title": "Optimismとは？"
       },
