--- a/src/languages/ru_RU.json
+++ b/src/languages/ru_RU.json
@@ -1039,7 +1039,7 @@
         "text": "Linea — это безопасный, экономичный блокчейн второго уровня, эквивалентный Ethereum, разработанный ConsenSys.\n\nОна позволяет осуществлять транзакции быстрее и дешевле без ущерба для безопасности и децентрализации, с целью привлечь следующий миллиард пользователей к web3.",
         "title": "Что такое Linea?"
       },
-      "optimism": {
+      "opmainnet": {
         "text": "Оптимизм - это сеть уровня 2, работающая поверх Ethereum, которая позволяет совершать более дешевые и быстрые транзакции, сохраняя при этом преимущества базовой безопасности Ethereum.\n\nОна объединяет множество транзакций вместе в виде «рулонов», прежде чем отправить их в Ethereum для постоянного хранения.",
         "title": "Что такое Оптимизм?"
       },
