--- a/src/languages/th_TH.json
+++ b/src/languages/th_TH.json
@@ -1039,7 +1039,7 @@
         "text": "Linea เป็นบล็อกเชนเลเยอร์ 2 ที่ปลอดภัยและมีต้นทุนต่ำเทียบเท่า Ethereum พัฒนาโดย ConsenSys\n\nมันช่วยให้ธุรกรรมรวดเร็วและต้นทุนต่ำโดยไม่สูญเสียความปลอดภัยและการกระจายศูนย์ มีเป้าหมายที่จะดึงดูดผู้ใช้ใหม่หนึ่งพันล้านคนสู่ web3",
         "title": "Linea คืออะไร?"
       },
-      "optimism": {
+      "opmainnet": {
         "text": "Optimism เป็นเครือข่ายชั้นที่ 2 ที่ทำงานบน Ethereum ทำให้การทำธุรกรรมถูกต้นและเร็วขึ้นในขณะที่ยังได้รับประโยชน์จากการรักษาความปลอดภัยทางด้านล่างของ Ethereum\n\nมันรวมการทำธุรกรรมเยอะๆเข้าด้วยกันในรูปแบบ \"roll up\" ก่อนที่จะส่งลงไปให้อยู่ใน Ethereum อย่างถาวร",
         "title": "Optimism คืออะไร?"
       },
