--- a/src/languages/zh_CN.json
+++ b/src/languages/zh_CN.json
@@ -1039,7 +1039,7 @@
         "text": "Linea是由ConsenSys开发的安全且低成本的等同于Ethereum的Layer 2区块链。\n\n它能实现更快且更实惠的交易，同时不影响安全性和去中心化，旨在将下一个十亿用户引入web3。",
         "title": "什么是 Linea？"
       },
-      "optimism": {
+      "opmainnet": {
         "text": "Optimism是一个在以太坊之上运行的第二层网络，它能同时利用到以太坊的底层安全性，实现更便宜、更快的交易。\n\n它在发送到以太坊永久存储前将大量交易打包在一个\"滚动更新\"中。",
         "title": "什么是Optimism？"
       },
