add basic structure and nav header

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3380,6 +3380,7 @@
       "mcap": "MCAP"
     },
     "king_of_hill": {
+      "title": "Launchpad",
       "current_king": "CURRENT KING",
       "last_winner": "LAST WINNER",
       "how_it_works": "How It Works",
