migrate old koth to new location

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3387,6 +3387,9 @@
       "starting_next_round": "Starting next round",
       "left": "LEFT",
       "king_of_the_hill": "King of the Hill",
+      "name": "Name",
+      "vol": "VOL",
+      "mcap": "MCAP",
       "explain_sheet": {
         "next": "Next",
         "got_it": "Got it",
