improve keeping existing name while moving through statuses

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -2494,29 +2494,30 @@
         "failed": "Send Failed"
       },
       "contract": {
-        "failed": "Failed",
-        "minted": "Minted",
-        "minting": "Minting",
-        "pending": "Pending",
-        "swapped": "Swapped",
-        "sent": "Sent",
         "approved": "Approved",
         "approving": "Approving",
         "bridged": "Bridged",
         "bridging": "Bridging",
         "cancelling": "Cancelling",
+        "confirmed": "Confirmed",
         "deposited": "Deposited",
         "depositing": "Depositing",
         "dropped": "Dropped",
+        "failed": "Failed",
         "launched": "Launched",
         "launching": "Launching",
+        "minted": "Minted",
+        "minting": "Minting",
+        "pending": "Pending",
         "purchased": "Purchased",
         "purchasing": "Purchasing",
         "received": "Received",
         "receiving": "Receiving",
         "selling": "Selling",
-        "speeding_up": "Speeding Up",
+        "sent": "Sent",
         "sold": "Sold",
+        "speeding_up": "Speeding Up",
+        "swapped": "Swapped",
         "withdrawing": "Withdrawing",
         "withdrew": "Withdrew"
       }
