--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3392,9 +3392,12 @@
     },
     "king_of_hill": {
       "title": "Launchpad",
+      "launch": "Launch",
       "current_king": "CURRENT KING",
-      "last_winner": "LAST WINNER",
-      "how_it_works": "How It Works",
+      "last_winner": "Last winner",
+      "no_previous_winner": "No previous winner",
+      "round_ends_in": "Round ends in",
+      "how_it_works": "How it works",
       "starting_next_round": "Starting next round",
       "left": "LEFT",
       "king_of_the_hill": "King of the Hill",
