fix labels for many types of transactions

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -2484,14 +2484,20 @@
       "copied": "Copied \"%{copiedText}\"",
       "invalid_paste": "You can't paste that here",
       "statuses": {
+        "airdropping": "Airdropping",
         "approved": "Approved",
         "approving": "Approving",
+        "bidding": "Bidding",
+        "borrowing": "Borrowing",
         "bridged": "Bridged",
         "bridging": "Bridging",
+        "burning": "Burning",
         "cancelled": "Cancelled",
         "cancelling": "Cancelling",
+        "claiming": "Claiming",
         "confirmed": "Confirmed",
         "contract_interaction": "Contract Interaction",
+        "deploying": "Deploying",
         "deposited": "Deposited",
         "depositing": "Depositing",
         "dropped": "Dropped",
@@ -2505,17 +2511,23 @@
         "purchasing": "Purchasing",
         "received": "Received",
         "receiving": "Receiving",
+        "repaying": "Repaying",
+        "revoking": "Revoking",
         "self": "Self",
         "selling": "Selling",
         "sending": "Sending",
         "sent": "Sent",
         "sold": "Sold",
         "speeding_up": "Speeding Up",
+        "staking": "Staking",
         "swapped": "Swapped",
         "swapping": "Swapping",
         "unknown": "Unknown",
+        "unstaking": "Unstaking",
+        "unwrapping": "Unwrapping",
         "withdrawing": "Withdrawing",
-        "withdrew": "Withdrew"
+        "withdrew": "Withdrew",
+        "wrapping": "Wrapping"
       }
     },
     "tokens_tab": {
