fix confirm types and better handle changing types

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -2484,50 +2484,10 @@
       "copied": "Copied \"%{copiedText}\"",
       "invalid_paste": "You can't paste that here",
       "statuses": {
-        "airdropping": "Airdropping",
-        "approved": "Approved",
-        "approving": "Approving",
-        "bidding": "Bidding",
-        "borrowing": "Borrowing",
-        "bridged": "Bridged",
-        "bridging": "Bridging",
-        "burning": "Burning",
-        "cancelled": "Cancelled",
-        "cancelling": "Cancelling",
-        "claiming": "Claiming",
         "confirmed": "Confirmed",
-        "contract_interaction": "Contract Interaction",
-        "deploying": "Deploying",
-        "deposited": "Deposited",
-        "depositing": "Depositing",
         "dropped": "Dropped",
         "failed": "Failed",
-        "launched": "Launched",
-        "launching": "Launching",
-        "minted": "Minted",
-        "minting": "Minting",
-        "pending": "Pending",
-        "purchased": "Purchased",
-        "purchasing": "Purchasing",
-        "received": "Received",
-        "receiving": "Receiving",
-        "repaying": "Repaying",
-        "revoking": "Revoking",
-        "self": "Self",
-        "selling": "Selling",
-        "sending": "Sending",
-        "sent": "Sent",
-        "sold": "Sold",
-        "speeding_up": "Speeding Up",
-        "staking": "Staking",
-        "swapped": "Swapped",
-        "swapping": "Swapping",
-        "unknown": "Unknown",
-        "unstaking": "Unstaking",
-        "unwrapping": "Unwrapping",
-        "withdrawing": "Withdrawing",
-        "withdrew": "Withdrew",
-        "wrapping": "Wrapping"
+        "pending": "Pending"
       }
     },
     "tokens_tab": {
