--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -467,9 +467,6 @@
         "quote_error": "Quote Error",
         "no_route_found": "No Route Found",
         "fetching_quote": "Fetching Quote...",
-        "rainbow_eth_rewards": "Rainbow ETH Rewards",
-        "merkl_claimable": "%{dappName} Vault",
-        "merkl_claimable_description": "%{assetSymbols} Strategy",
         "select_a_network": "Select a Network",
         "select_a_token": "Select a Token",
         "amount_to_claim_on_network": "%{amount} to claim on %{network}",
@@ -479,9 +476,6 @@
         "claimed": "Claimed!",
         "claiming_failed": "Claim Failed",
         "insufficient_funds": "Insufficient Funds",
-        "hold_to_claim": "Hold to Claim",
-        "creator_lp_fees": "Creator LP Fees",
-        "rainbow_token_launcher": "Rainbow Token Launcher",
         "claim_amount": "Claim %{amount}",
         "done": "Done",
         "try_again": "Try Again",
@@ -525,6 +519,7 @@
       "alert": "Alert",
       "analyze_env_variables": "Analyze ENV Variables",
       "analyze_react_query": "Analyze React Query",
+      "analyze_env_variables": "Analyze ENV Variables",
       "applied": "APPLIED",
       "backups_deleted_successfully": "Backups Deleted Successfully",
       "clear_async_storage": "Clear AsyncStorage",
@@ -610,7 +605,6 @@
         "expires_in": "Expires in %{minutes}m",
         "from_divider": "from",
         "to_divider": "to",
-        "token": "Token",
         "view_on": "View on %{blockExplorerName}",
         "view_on_etherscan": "View on Etherscan",
         "copy_contract_address": "Copy Contract Address"
@@ -654,14 +648,16 @@
         },
         "unknown_price": {
           "title": "Market Value Unknown",
-          "description": "If you decide to continue, be sure you are satisfied with the quoted amounts"
+          "description": "If you decide to continue, be sure that you are satisfied receiving the quoted amount."
         },
         "losing_prefix": "Losing",
         "small_market": "Small Market",
         "small_market_try_smaller_amount": "Small market — try a smaller amount",
         "you_are_losing": "You're losing %{priceImpact}",
         "you_are_losing_prefix": "You're losing",
-        "label": "Possible loss"
+        "no_data": "Market Value Unknown",
+        "label": "Possible loss",
+        "no_data_subtitle": "If you decide to continue, be sure that you are satisfied with the quoted amount"
       },
       "source": {
         "rainbow": "Auto",
@@ -732,7 +728,6 @@
           "circulating_supply": "Circulating Supply",
           "max_supply": "Max Supply",
           "fully_diluted_valuation": "Fully Diluted Valuation",
-          "created_by": "Created by",
           "market_cap": "Market Cap",
           "created": "Created",
           "volume_24_hours": "24h Volume",
@@ -753,34 +748,9 @@
         "about": {
           "title": "About",
           "what_is": "What is %{assetName}?"
-        },
-        "history": {
-          "tabs": {
-            "all": "All",
-            "buys": "Buys",
-            "sells": "Sells"
-          },
-          "more": "More",
-          "less": "Less",
-          "bought": "Bought",
-          "sold": "Sold",
-          "received": "Received",
-          "sent": "Sent",
-          "unknown": "Unknown"
         }
       },
       "chart": {
-        "candlestick": {
-          "candle_field_labels": {
-            "c": "Close",
-            "h": "H",
-            "l": "L",
-            "o": "Open",
-            "t": "",
-            "v": "V"
-          },
-          "no_volume_label": "None"
-        },
         "all_time": "All Time",
         "date": {
           "months": {
@@ -960,8 +930,6 @@
       "farcaster_title": "You've unlocked\nRainbowcast",
       "redacted_description": "A stupi-exclusive Rainbow icon for the true Gdupi enjoyers.",
       "redacted_title": "You've unlocked\n Redacted Rainbow",
-      "baggy_description": "From the streets to the chain, this little bag holds your portable dose of Rainbow vibes. Taste the colors, and feel the difference.",
-      "baggy_title": "You've unlocked\n Rainbow Baggy",
       "button": "Snag the icon"
     },
     "explain": {
@@ -1072,7 +1040,7 @@
         "text": "Linea is a secure, low-cost, Ethereum-equivalent Layer 2 blockchain developed by ConsenSys.\n\nIt enables faster and more affordable transactions without compromising security and decentralization, aiming to onboard the next billion users to web3.",
         "title": "What's Linea?"
       },
-      "opmainnet": {
+      "optimism": {
         "text": "Optimism is a Layer 2 network that runs on top of Ethereum, enabling cheaper and faster transactions while still benefiting from the underlying security of Ethereum.\n\nIt bundles lots of transactions together in a \"roll up\" before sending them down to live permanently on Ethereum.",
         "title": "What's Optimism?"
       },
@@ -2912,7 +2880,6 @@
         "sending_title": "Sending",
         "you_own_this_wallet": "You own this wallet",
         "first_time_send": "First time send",
-        "previous_send": "%{number} previous send",
         "previous_sends": "%{number} previous sends"
       },
       "wallet_connect": {
@@ -3366,63 +3333,10 @@
         "to_claim_on": "to claim on %{network}",
         "view_coin": "View Coin",
         "you": "You"
-      },
-      "errors": {
-        "header": "Error launching token",
-        "api_request_failed": "API request failed",
-        "api_response_invalid": "API response invalid",
-        "contract_interaction_failed": "Contract interaction failed",
-        "gas_estimation_failed": "Gas estimation failed",
-        "insufficient_funds": "Insufficient funds",
-        "submission_details_missing": "Submission details missing",
-        "transaction_rejected": "Transaction rejected",
-        "transaction_failed": "Transaction failed",
-        "transaction_simulation_failed": "Transaction simulation failed",
-        "unknown_error": "Unknown error",
-        "wallet_connection_error": "Wallet connection error",
-        "invalid_params": "Invalid parameters",
-        "missing_required_param": "Missing required parameters"
       }
     },
     "done": "Done",
     "copy": "Copy",
-    "paste": "Paste",
-    "market_data": {
-      "vol": "VOL",
-      "price": "PRICE",
-      "mcap": "MCAP"
-    },
-    "king_of_hill": {
-      "title": "Launchpad",
-      "launch": "Launch",
-      "current_king": "CURRENT KING",
-      "last_winner": "Last winner",
-      "no_previous_winner": "No previous winner",
-      "round_ends_in": "Round ends in",
-      "how_it_works": "How it works",
-      "starting_next_round": "Starting next round",
-      "left": "LEFT",
-      "king_of_the_hill": "King of the Hill",
-      "name": "Name",
-      "explain_sheet": {
-        "next": "Next",
-        "got_it": "Got it",
-        "steps": {
-          "step_1": {
-            "title": "The race is live",
-            "subtitle_parts": ["The token with the most", " buy volume ", "right now is the current king."]
-          },
-          "step_2": {
-            "title": "One crown a day",
-            "subtitle_parts": ["At", " midnight (12:00 AM UTC), ", "the leading token is crowned the daily winner."]
-          },
-          "step_3": {
-            "title": "Win Rewards",
-            "subtitle_parts": ["Buyers of the current King get", " 2x points."],
-            "subtitle_two_parts": ["Creators", " earn points ", "when crowned."]
-          }
-        }
-      }
-    }
+    "paste": "Paste"
   }
 }
