--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -23,6 +23,7 @@
       "tab_investments": "Pools",
       "tab_savings": "Savings",
       "tab_showcase": "Showcase",
+      "tab_perps": "Perps",
       "tab_points": "Points",
       "tab_positions": "Positions",
       "tab_rewards": "Rewards",
