--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3250,7 +3250,7 @@
       },
       "prebuy": {
         "balance_after_gas_fee": "Available Balance: %{balance}",
-        "title": "Pre-buy more tokens"
+        "title": "Pre-buy tokens"
       },
       "review": {
         "token_allocation": "Token allocation",
