--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -47,6 +47,7 @@
       "unknown_token": "Unknown Token"
     },
     "activity_list": {
+      "title": "Activity",
       "empty_state": {
         "default_label": "No transactions yet",
         "recycler_label": "No transactions yet",
@@ -756,6 +757,7 @@
           "what_is": "What is %{assetName}?"
         },
         "history": {
+          "title": "History",
           "tabs": {
             "all": "All",
             "buys": "Buys",
@@ -2011,6 +2013,9 @@
       "rewards": "Rewards",
       "pools": "Pools"
     },
+    "profile": {
+      "title": "Activity"
+    },
     "savings": {
       "deposit": "Deposit",
       "deposit_from_wallet": "Deposit from Wallet",
@@ -3207,7 +3212,8 @@
       "show_less": "Show Less",
       "more": "More",
       "show_more": "More Networks",
-      "all_networks": "All Networks"
+      "all_networks": "All Networks",
+      "search": "Search"
     },
     "token_launcher": {
       "airdrop": {
