Adjust KOTH explain sheet copy

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3411,7 +3411,7 @@
         "steps": {
           "step_1": {
             "title": "The race is live",
-            "subtitle_parts": ["The token with the most", " buy volume ", "right now is the current king."]
+            "subtitle_parts": ["The current king is the token created in the last 30 days with the most", " buy volume ", "today."]
           },
           "step_2": {
             "title": "One crown a day",
