i18n: scan to connect
fix

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -2858,6 +2858,7 @@
         "find_a_code": "Find a code to scan",
         "qr_1_app_connected": "1 Connected App",
         "qr_multiple_apps_connected": "%{appsConnectedCount} Connected Apps",
+        "scan_to_connect": "Scan to Connect",
         "scan_to_pay_or_connect": "Camera access needed",
         "simulator_mode": "Simulator Mode",
         "sorry_could_not_be_recognized": "Sorry, this QR code could not be recognized.",
